--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
     <div class="container">
       <section id="main_content">
-        {{ content }}
+        {{ site.posts }}
       </section>
     </div>
 
