--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,7 @@
         {% endif %}
 
         {% if page.comments %}
+          <div style="padding-top: 20px"></div>
           <div id="disqus_thread"></div>
           <script>
               /**
@@ -53,6 +54,8 @@
               })();
           </script>
           <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        {% else %}
+          <p>Comments have been disabled for this post.</p>
         {% endif %}
       </section>
     </div>
