--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
       <section id="main_content">
         <h2>Posts</h2>
         <ul>
-          {% assign posts = site.posts | reverse %}
+          {% assign posts = site.posts %}
           {% for post in posts %}
             <li>
               <a href="/blog{{ post.url }}">{{ post.title }}</a>
